<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_dialog"
        android:elevation="8dp"
        android:orientation="vertical"
        android:paddingVertical="8dp">

        <TextView
            android:id="@+id/focusDuration15m"
            style="@style/TextSmallBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/focus_15m"
            android:textColor="?attr/primaryColor" />

        <TextView
            android:id="@+id/focusDuration30m"
            style="@style/TextSmallBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/focus_30m"
            android:textColor="?attr/primaryColor" />

        <TextView
            android:id="@+id/focusDuration1h"
            style="@style/TextSmallBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/focus_1h"
            android:textColor="?attr/primaryColor" />

        <TextView
            android:id="@+id/focusDuration2h"
            style="@style/TextSmallBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/focus_2h"
            android:textColor="?attr/primaryColor" />

        <TextView
            android:id="@+id/focusDurationCustom"
            style="@style/TextSmallBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/custom"
            android:textColor="?attr/primaryColor" />

        <TextView
            android:id="@+id/focusDurationCancel"
            style="@style/TextSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingHorizontal="24dp"
            android:paddingVertical="14dp"
            android:text="@string/cancel"
            android:textColor="?attr/primaryColorTrans80" />

    </LinearLayout>

</FrameLayout>
