<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_dialog"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/accessibility_disclosure_title"
            android:textColor="?attr/primaryColor" />

        <TextView
            style="@style/TextSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:lineSpacingExtra="3dp"
            android:text="@string/accessibility_disclosure"
            android:textColor="?attr/primaryColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/notWorking"
                style="@style/TextSmall"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/not_working"
                android:visibility="gone"
                tools:visibility="visible" />

            <Space
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:id="@+id/closeAccessibility"
                style="@style/TextSmallBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="20dp"
                android:paddingVertical="4dp"
                android:text="@string/close" />

            <TextView
                android:id="@+id/actionAccessibility"
                style="@style/TextSmallBold"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingVertical="4dp"
                android:text="@string/enable" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
