<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/scrimColor"
    android:fitsSystemWindows="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingHorizontal="32dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="?attr/primaryColor"
            style="@style/TextLarge" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:gravity="center"
            android:text="@string/sign_in_subtitle"
            style="@style/TextSmall" />

        <TextView
            android:id="@+id/btnSignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:background="@drawable/rounded_primary_gradient"
            android:gravity="center"
            android:paddingHorizontal="32dp"
            android:paddingVertical="12dp"
            android:text="@string/sign_in_with_google"
            style="@style/TextSmall"
            tools:ignore="TextContrastCheck" />

        <TextView
            android:id="@+id/btnSkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/skip"
            android:textColor="?attr/primaryColorTrans50"
            style="@style/TextSmall" />

    </LinearLayout>

</FrameLayout>
