<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_dialog"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="20dp">

        <TextView
            android:id="@+id/languagePickerTitle"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/select_language"
            android:textColor="?attr/primaryColor" />

        <TextView
            android:id="@+id/languagePickerSubtitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/select_language_description"
            android:textColor="?attr/primaryColorTrans80"
            android:textSize="14sp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="18dp"
            android:layout_marginBottom="18dp"
            android:background="?attr/primaryColorTrans50" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fillViewport="true"
            android:overScrollMode="never">

            <LinearLayout
                android:id="@+id/languageItemsContainer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </ScrollView>

        <TextView
            android:id="@+id/languagePickerClose"
            style="@style/TextSmallBold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:background="@drawable/rounded_rect_shade_color"
            android:gravity="center"
            android:padding="14dp"
            android:text="@string/cancel"
            android:textColor="?attr/primaryColor" />
    </LinearLayout>
</FrameLayout>
