<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_rect_dialog"
        android:elevation="8dp"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            android:id="@+id/mindfulMorningTitle"
            style="@style/TextLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:includeFontPadding="false"
            android:text="@string/mindful_morning"
            android:textColor="?attr/primaryColor" />

        <TextView
            android:id="@+id/mindfulMorningBlockedText"
            style="@style/TextSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:lineSpacingExtra="3dp"
            android:textColor="?attr/primaryColor" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:baselineAligned="false"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/mindfulMorningStayFocused"
                style="@style/TextSmallBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:background="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="14dp"
                android:text="@string/mindful_morning_stay_focused"
                android:textColor="?attr/primaryColorTrans80" />

            <TextView
                android:id="@+id/mindfulMorningOpenAnyway"
                style="@style/TextSmallBold"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:background="@drawable/focus_mode_dialog_button"
                android:gravity="center"
                android:paddingHorizontal="8dp"
                android:paddingVertical="14dp"
                android:text="@string/mindful_morning_open_anyway"
                android:textColor="?attr/primaryColor" />

        </LinearLayout>

    </LinearLayout>

</FrameLayout>
